--- a/Stat301_Project.Rmd
+++ b/Stat301_Project.Rmd
@@ -52,7 +52,10 @@ player_stats %>%
     ggplot(aes(x = Pos, y = mean_pts)) +
     geom_point() +
     geom_errorbar(aes(ymin = mean_pts - se_pts * t_star,
-                      ymax = mean_pts + se_pts * t_star))
+                      ymax = mean_pts + se_pts * t_star)
+                  ) +
+    labs(x = "Player Position",
+         y = "Average Points")
 ```
 p-value = <2e-16 (i.e. 0.0000000000000002); f-value = 68.39
 Reject H0; there is evidence to support the claim that at least 2 scoring point 
@@ -79,11 +82,37 @@ player_stats$AgeGroup = cut(player_stats$Age,
                              right = TRUE)
 
 # We'll have N/A in some AgeGroups - removing them
-player_stats <- subset(player_stats, !is.na(AgeGroup))
+player_stats = subset(player_stats, !is.na(AgeGroup))
 
 age_position_model = aov(PTS ~ Pos + AgeGroup + Pos * AgeGroup, data = player_stats)
 summary(age_position_model)
 TukeyHSD(age_position_model)
+
+# graphing
+player_stats %>%
+    group_by(Pos, AgeGroup) %>%
+    summarise(mean_pts = mean(PTS),
+              se_pts = sd(PTS)/sqrt(length(PTS)),
+              t_star = qt(1 - 0.05/2, length(PTS) - 1),
+              .groups = "drop"
+              ) %>%
+    ggplot(aes(x = Pos,
+               y = mean_pts,
+               fill = AgeGroup)) +
+    geom_bar(stat = "identity",
+             position = "dodge") +
+    geom_errorbar(aes(ymin = mean_pts - se_pts * t_star,
+                      ymax = mean_pts + se_pts * t_star),
+                  position = "dodge") +
+    # I put the text here because I thought it looked incorrect - remove for the paper
+    geom_text(
+        aes(label = round(mean_pts, 1)),
+        position = position_dodge(0.9)
+        ) +
+    labs(x = "Position",
+         y = "Average Points",
+         title = "Points by Position and Age Group",
+         fill = "Age Group")
 
 ```
 
